day1-main/2024 전국 충남 인프라/app/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deploy
  namespace: wsc2024
  labels:
    app: customer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: CUSTOMER_IMAGE
        ports:
        - containerPort: 8080
      nodeSelector:
        app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
  namespace: wsc2024
  labels:
    app: order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      serviceAccount: dynamodb-pull-sa
      containers:
      - name: order
        image: ORDER_IMAGE
        ports:
        - containerPort: 8080
      nodeSelector:
        app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
  namespace: wsc2024
  labels:
    app: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: PRODUCT_IMAGE
        ports:
        - containerPort: 8080
      nodeSelector:
        app: db
