day1-main/2024 전국 충남 인프라/app/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-svc
  namespace: wsc2024
spec:
  selector:
    app: customer
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: wsc2024
spec:
  selector:
    app: order
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: wsc2024
spec:
  selector:
    app: product
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
