day1-main/2024 전국 충남 인프라/app/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsc2024-ingress
  namespace: wsc2024
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: wsc2024-alb
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.targets: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"order-svc","servicePort":80,"weight":50},{"serviceName":"product-svc","servicePort":80,"weight":50}]}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /v1/customer
            pathType: Prefix
            backend:
              service:
                name: customer-svc
                port:
                  number: 80
          - path: /v1/order
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /v1/product
            pathType: Prefix
            backend:
              service:
                name: product-svc
                port:
                  number: 80
          - path: /healthcheck
            pathType: ImplementationSpecific
            backend:
              service:
                name: targets
                port:
                  name: use-annotation
